6 vpc-nginx-ec2-httpaccess/securitygroup.tf
resource "aws_security_group" "sg-nginx" {
  
  vpc_id = aws_vpc.tikitu-vpc.id 
  #inbound
  ingress {
    from_port = 80
    to_port = 80
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  # outbound 
  egress {
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    name = "sg-nginx"
  }
}
